processo de aprendizado de position absolute

--- a/position-absolute.html
+++ b/position-absolute.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -17,6 +16,12 @@
     </div>
 
     <div class="retangulo"></div>
+
+    <div id="privacidade">
+        <p>Termos de privacidade ...</p>
+
+        <div id="privacidade-fechar">X</div>
+    </div>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae porro fugit distinctio optio praesentium neque
         enim esse doloribus omnis! Laudantium cupiditate in illum quae quis sequi, possimus nesciunt mollitia quisquam.
